@@ -1,4 +1,5 @@
 import logging
+import subprocess
 import sys
 import uuid
 
@@ -6,9 +7,6 @@ import numpy as np
 import pytest
 
 import rasterio
-
-
-logging.basicConfig(stream=sys.stderr, level=logging.DEBUG)
 
 
 @pytest.fixture(scope='function')
@@ -23,10 +21,8 @@ def complex_image(height, width, dtype):
         [complex(x, x) for x in range(height * width)],
         dtype=dtype).reshape(height, width)
 
-dtypes = ['complex', 'complex64', 'complex128']
 
-
-@pytest.mark.parametrize("dtype", dtypes)
+@pytest.mark.parametrize("dtype", ["complex", "complex64", "complex128"])
 @pytest.mark.parametrize("height,width", [(20, 20)])
 def test_read_array(tempfile, dtype, height, width):
     """_io functions read and write arrays correctly"""
@@ -58,3 +54,45 @@ def test_complex_nodata(tmpdir):
 
     with rasterio.open(tempfile) as dst:
         assert dst.nodata == 0
+
+
+@pytest.mark.gdalbin
+def test_complex_int16(tmpdir):
+    """A cint16 dataset can be created"""
+    import numpy as np
+    import rasterio
+    from rasterio.transform import Affine
+
+    x = np.linspace(-4.0, 4.0, 240)
+    y = np.linspace(-3.0, 3.0, 180)
+    X, Y = np.meshgrid(x, y)
+    Z1 = np.ones_like(X) + 1j
+
+    res = (x[-1] - x[0]) / 240.0
+    transform1 = Affine.translation(x[0] - res / 2, y[-1] - res / 2) * Affine.scale(
+        res, -res
+    )
+
+    tempfile = str(tmpdir.join("test.tif"))
+
+    with rasterio.open(
+        tempfile,
+        "w",
+        driver="GTiff",
+        height=Z1.shape[0],
+        width=Z1.shape[1],
+        nodata=0,
+        count=1,
+        dtype="complex_int16",
+        crs="+proj=latlong",
+        transform=transform1,
+    ) as dst:
+        dst.write(Z1, 1)
+
+    assert "Type=CInt16" in subprocess.check_output(["gdalinfo", tempfile]).decode(
+        "utf-8"
+    )
+
+    with rasterio.open(tempfile) as dst:
+        data = dst.read()
+        assert data.dtype == np.complex64
