@@ -4,6 +4,8 @@ Changes
 1.2.4 (TBD)
 -----------
 
+- Read GDAL CInt16 data as np.complex64 and allow saving complex data to CInt16
+  (#2185).
 - Skip merge sources which do not overlap the destination.
 - Allow unsafe casting in the merge tool, restoring behavior of version 1.2.0
   (#2179).
